# GAN-AD-test-suite

./: .gitignore  consts.py  dataset.py  model.py  print_examples.py  pyproject.toml  train.py  trainer.py
settings/: default.json
settings/dataset/: default.json
settings/model/: default.json
src/ts_gan_bench/: __main__.py  constants.py  dataloader.py  model_lstm.py  model_tcn.py  settings.py  trainer.py  utils.py  visualization.py
src/ts_gan_bench/trainers/: __init__.py  ae_gan_trainer.py  base_trainer.py  gan_trainer.py
tests/: test_model.py
